src/Components/AddToTrip/AddToTrip.scss
@import '../../sass/variables.scss';

.add-to-trip {
  display: flex;
  justify-content: space-evenly;
  padding: 2% 0 5% 0;
  height: 80vh;
  overflow: hidden;
}

.greeting-container {
  font-size: 3rem;
  height: 10vh;
  text-transform: capitalize;
  display: flex;
  flex-direction: column;
  justify-content: center;
  h2 {
    font-size: 2.5rem;
  }
}

.dates-container {
  display: flex;
  flex-direction: column;
  margin: 7% 0;
  height: 80%;
  h2 {
    font-size: 2.2rem;
  }
}

.addpg-dates-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 10vh 0;
  height: 100%;
}

.date-radio {
  display: flex;
  padding: 5% 0;
}

.budget-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 15vh;
  margin: 17% 0;
  justify-content: space-around;
  h2 {
    font-size: 2.2rem;
  }
  p {
    font-size: 1.5rem;
  }
}

.addpg-budget-list {
  display: flex;

}

.addpg-budget-btn {
  cursor: pointer;
  background-color: #9B6127;
  border: none;
  color: white;
  font-size: 1rem;
  padding: 10% 25%;
  margin: 0.5rem;
  border-radius: 5px;
}

.accept-trip-btn {
  cursor: pointer;
  background: #9B6127;
  border: 1px solid black;
  border-radius: 5px;
  color: white;
  font-size: 1.225rem;
  font-weight:200;
  padding: 15px 20px;
  font-family:"Poppins", sans-serif;
  position: relative;
  z-index:100;
  transition:all 300ms ease;
  margin: 50vh 0;
  &:hover{
    font-size:1.5em;
    box-shadow: 4px 6px $secondary-color;
  }
}

